# ModernBoy

./: .gitignore  Actor.cpp  Actor.h  Actor.hpp  ActorManager.cpp  Actors.cpp  Actors.hpp  Alias.hpp  AnimSpriteComponent.cpp  Asteroid.cpp  BGSpriteComponent.cpp  Ball.cpp  BoxComponent.cpp  CMakeLists.txt  CMakePresets.json  CollisionComponent.cpp  Component.cpp  Components.cpp  Components.hpp  DrawComponent.cpp  Game.cpp  Game.h  Game.hpp  GameEngine.cpp  GameEngineWithSDL.cpp  GameLogic.cpp  GraphicsEngine.cpp  GraphicsEngineWithSDL.cpp  InputComponent.cpp  InputSystemWithSDL.cpp  JsonHelper.cpp  JsonHelper.hpp  Level0.json  LevelLoader.cpp  LevelLoader.hpp  Logger.cpp  Logger.hpp  Main.cpp  MainEngine.cpp  MainEngine.hpp  (+35 more)
Game/include/: ActorManagerForTest.hpp  Asteroid.hpp  Ball.hpp  CelestialSky.hpp  Paddle.hpp  Ship.hpp  TestGame.hpp  Wall.hpp  p1pingpong.hpp  spaceship.hpp
Game/src/: ActorManagerForTest.cpp  Asteroid.cpp  Ball.cpp  CelestialSky.cpp  Paddle.cpp  Ship.cpp  TestGame.cpp  Wall.cpp  p1pingpong.cpp  spaceship.cpp
GameEngineWithSDL/include/: AnimSprite.hpp  AnimSpriteComponent.hpp  BGSprite.hpp  BGSpriteComponent.hpp  GameEngineWithSDL.hpp  GraphicsEngineWithSDL.hpp  InputSystemWithSDL.hpp  ResourceManagerWithSDL.hpp  Sprite.hpp  SpriteComponent.hpp  TimerWithSDL.hpp
GameEngineWithSDL/src/: AnimSprite.cpp  AnimSpriteComponent.cpp  BGSprite.cpp  BGSpriteComponent.cpp  BoxComponent.cpp  GameEngineWithSDL.cpp  GraphicsEngineWithSDL.cpp  InputSystemWithSDL.cpp  ResourceManagerWithSDL.cpp  Sprite.cpp  SpriteComponent.cpp  TimerWithSDL.cpp
WithSDL/include/: AnimSprite.hpp  BGSprite.hpp  Core.hpp  Graphics.hpp  InputSystem.hpp  ResourceManager.hpp  Sprite.hpp  Timer.hpp  fwd.hpp
WithSDL/src/: Logger.cpp  ResourceManager.cpp  Sprite.cpp  Timer.cpp
WithSTD/include/: Logger.hpp  Timer.hpp
WithSTD/src/: Logger.cpp
_include/: FWD.hpp  Math.hpp  functor.hpp  locator.hpp  singleton.hpp
_include/Actor/: Actor.hpp
_include/Component/: Component.hpp
_include/Engine/: Main.hpp  SystemLocator.hpp  Types.hpp
_include/WithSTD/: ConsoleInput.hpp
_src/Actor/: Actor.cpp
_src/Component/: Colored.cpp  Drawable.cpp  Movable.cpp
_src/Engine/: Core.cpp  Main.cpp  SystemLocator.cpp
_src/WithSTD/: ConsoleInput.cpp  Timer.cpp
include/: AIComponent.hpp  Actor.hpp  ActorFactory.hpp  ActorManager.hpp  Actors.hpp  AnimSpriteComponent.hpp  Attributes.hpp  BGSpriteComponent.hpp  Blueprint.hpp  Camera.hpp  CameraComponent.hpp  CameraMoveComponent.hpp  Component.hpp  ComponentFactory.hpp  Components.hpp  Concept.hpp  Concepts.hpp  Core.hpp  CubeMapMeshComponent.hpp  CubeMeshComponent.hpp  CylinderMeshComponent.hpp  DrawComponent.hpp  FWD.hpp  GUIAdaptor.hpp  Game.hpp  GameEngineWithSDL.hpp  GraphicsEngineWithSDL.hpp  GridMeshComponent.hpp  Hit.hpp  Info.hpp  InputComponent.hpp  InputState.hpp  InputSystem.hpp  JsonHelper.hpp  LevelLoader.hpp  Light.hpp  LightComponent.hpp  Localized.hpp  Logger.hpp  MainEngine.hpp  (+45 more)
include/Actor/: Actor.hpp  Asteroid.hpp  Ball.hpp  IActor.hpp  Paddle.hpp  Traits.hpp  Vanilla.hpp  Wall.hpp
include/Algorithm/: base.hpp
include/Blueprint/: Blueprint.hpp
include/Component/: AI.hpp  AIComponent.hpp  Ability.hpp  BoxComponent.hpp  CollisionComponent.hpp  ColoredBody.hpp  Component.hpp  Controllable.hpp  DrawComponent.hpp  Drawable.hpp  IComponent.hpp  InputComponent.hpp  Movable.hpp  MoveComponent.hpp  Traits.hpp
include/Engine/: ActorManager.hpp  Core.hpp  GameLogic.hpp  Graphics.hpp  InputSystem.hpp  JsonHelper.hpp  LevelLoader.hpp  Logger.hpp  PhysicsSimulator.hpp  ResourceManager.hpp  SoundEngine.hpp  SystemLocator.hpp  Timer.hpp  Types.hpp
include/GameEngine/: GameEngine.hpp  IGameEngine.hpp
include/SubEngine/: ActorManager.hpp  GameLogic.hpp  GraphicsEngine.hpp  ISubEngine.hpp  InputSystem.hpp  InputSystemWithSDL.hpp  Logger.hpp  PhysicsSimulator.hpp  ResourceManager.hpp  SoundEngine.hpp  SubEngine.hpp  Timer.hpp  (+1 more)
setting/: Level0.json
settings/: glob.json
src/: Actor.cpp  ActorFactory.cpp  ActorManager.cpp  Attributes.cpp  BoxComponent.cpp  CMakeLists.txt  CPS.hlsl  CVS.hlsl  Camera.cpp  CameraComponent.cpp  CameraMoveComponent.cpp  CollisionComponent.cpp  ColoredBody.cpp  Common.hlsli  Component.cpp  ComponentFactory.cpp  Controllable.cpp  Core.cpp  CubeMapMeshComponent.cpp  CubeMappingCommon.hlsli  CubeMappingPS.hlsl  CubeMappingVS.hlsl  CubeMeshComponent.cpp  CylinderMeshComponent.cpp  DrawComponent.cpp  Drawable.cpp  EnvMappingPS.hlsl  GUIAdaptor.cpp  GameEngine.cpp  GameLogic.cpp  GraphicsEngine.cpp  GridMeshComponent.cpp  InputComponent.cpp  InputState.cpp  InputSystem.cpp  JsonHelper.cpp  LevelLoader.cpp  LightComponent.cpp  Logger.cpp  MainEngine.cpp  (+30 more)
src/Actor/: Actor.cpp  Vanilla.cpp
src/Algorithm/: CMakeLists.txt  Math.cpp  base.cpp
src/Component/: AI.cpp  Ability.cpp  Colored.cpp  Component.cpp  Controllable.cpp  Drawable.cpp  Movable.cpp
src/Engine/: ActorManager.cpp  Core.cpp  GameLogic.cpp  Graphics.cpp  InputSystem.cpp  JsonHelper.cpp  LevelLoader.cpp  Logger.cpp  PhysicsSimulator.cpp  ResourceManager.cpp  SoundEngine.cpp  SystemLocator.cpp  Timer.cpp
src/Model2D/: PhysicsSimulator.cpp
src/System/: Nulls.cpp
src/System/Graphics/: Graphics.cpp
src/System/Managing/: Actors.cpp
src/Test/: ActorManager.cpp  Asteroid.cpp  Ball.cpp  CelestialSky.cpp  Paddle.cpp  Ship.cpp  Wall.cpp
src/WithSDL/: AnimSprite.cpp  BGSprite.cpp  Core.cpp  Graphics.cpp  InputSystem.cpp  Logger.cpp  ResourceManager.cpp  Sprite.cpp  Timer.cpp
src/WithSTD/: InputSystem.cpp  Logger.cpp  Timer.cpp
src/_src/Model2D/: PhysicsSimulator.cpp
src/_src/eg/: GameLogic.cpp  PhysicsSimulator.cpp
src/eg/: ActorManager.cpp  InputSystem.cpp  JsonHelper.cpp  LevelLoader.cpp
src/imgui_impl/: CMakeLists.txt  imgui_impl_dx11.cpp  imgui_impl_win32.cpp
test/: Algorithm_test.cpp  CMakeLists.txt  Math_test.cpp
test/include/: ActorManager.hpp  Asteroid.hpp  Ball.hpp  CelestialSky.hpp  Paddle.hpp  Ship.hpp  Wall.hpp
test/src/: ActorManager.cpp  Ball.cpp  Paddle.cpp  Ship.cpp  TestGame.cpp  Wall.cpp
wiki/: Project.md
(+66 files in other folders)
